# SteamOS-Boot-Mode-Buttons-Plasma-6-

./: .gitignore  INSTALL.md  README.md  index.html  package.json
docs/: V2_SPEC.md
io.github.dharma_punk.steamos_boot_buttons/: metadata.json
io.github.dharma_punk.steamos_boot_buttons/contents/config/: main.xml
io.github.dharma_punk.steamos_boot_buttons/contents/ui/: configGeneral.qml  main.qml
scripts/: install-local.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: TopBar.tsx
src/layout/: AppShell.tsx
src/types/: task.ts
src/views/: AllTasksView.tsx  CalendarView.tsx  CompletedView.tsx  TodayView.tsx
