[package]
name = "win11-todo-desktop"
version = "0.1.0"
description = "Windows 11 style desktop to-do app"
authors = ["Codex"]
edition = "2021"

[lib]
name = "win11_todo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.1.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
